[tool.poetry]
name = "synthposts"
version = "0.1.0"
description = "Python library to make generative posts in social media."
authors = ["Francisco Palm <fpalm@qu4nt.com>"]
license = "BSD 3-Clause \"New\" or \"Revised\" License"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^9.6.1"
python-twitter = "^3.5"
pip = "^20.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
